# tm

./: .commitlintrc.json  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  prd.txt
.cursor/rules/: .cursorrules  backend.mdc  discovery.mdc  frontend.mdc  infrastructure.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/auth/: router.py  schemas.py
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt  setup.py
backend/api/auth/: router.py  schemas.py
backend/api/discover/: router.py  schemas.py
backend/api/messaging/: router.py  schemas.py
backend/api/profiles/: router.py  schemas.py
backend/app/: main.py
backend/app/db/: database.py
backend/migrations/: env.py
backend/migrations/versions/: b645c24eb204_initial_migration.py
backend/models/: base.py  matching.py  user.py
backend/music_collab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/services/auth/: auth.py
docs/: ios.md
frontend/: .env.example  .eslintrc.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/config/: firebase.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: sampleProfiles.ts
frontend/src/hooks/: useKeyboardShortcuts.ts  useProfiles.ts
ios/: Package.swift  Podfile  project.yml
ios/App/: project.yml
ios/App.swiftpm/: Package.swift
services/auth/: service.py
src/: App.tsx
src/contexts/: AuthContext.tsx
src/pages/: Login.tsx  ProfileSetup.tsx
(+33 files in other folders)
